<resources>
    <string name="app_name">StarFilms</string>
    <string name="or">Or</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="crear">Crear Cuenta</string>
    <string name="confirmar">Confirmar Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="app_logo">app_logo</string>
    <string name="register_PasswordRepeat">Repetir Contraseña</string>
    <string name="title_activity_favoritos">FavoritosActivity</string>
</resources>